# ensure_impl

./: CHANGELOG.md  Cargo.toml  README.md
macros/: Cargo.toml  README.md
macros/src/: lib.rs  translate.rs
macros/src/util/: funcs.rs  mod.rs  self_in_where_replacer.rs
src/: lib.rs  prelude.rs
tests/: test.rs
tests_compile_fail/: mod.rs
