[package]
name = "ensure_impl_macro"
version = "0.2.0"
description = "Macros for `ensure_impl`."
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
